[package]
name = "mundus"
version = "0.1.0"
authors = ["Caelan <803687+clangdo@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
serenity = { version = "0.10.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.4.0", features = ["rt-multi-thread", "macros"] }